tests/files/sprintf_star.out
float(1.2345678901234567)
float(1.2345678901234569E+100)

Warning: Undefined variable $args in /Volumes/WebServer/Projects/php.fprint/functions.php on line 29

Fatal error: Uncaught TypeError: user_vprintf(): Argument #2 ($values) must be of type array, null given, called in /Volumes/WebServer/Projects/php.fprint/functions.php on line 29 and defined in /Volumes/WebServer/Projects/php.fprint/functions.php:22
Stack trace:
#0 /Volumes/WebServer/Projects/php.fprint/functions.php(29): user_vprintf('%.*f\n', NULL)
#1 /Volumes/WebServer/Projects/php.fprint/tests/files/sprintf_star.php(8): user_printf('%.*f\n', 10, 1.2345678901235)
#2 {main}
  thrown in /Volumes/WebServer/Projects/php.fprint/functions.php on line 22